--- a/trunk/doc/smp_discover.8
+++ b/trunk/doc/smp_discover.8
@@ -3,22 +3,30 @@
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
 .B smp_discover
-[\fI\-\-brief\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-ignore\fR]
-[\fI\-\-interface=PARAMS\fR] [\fI\-\-list\fR] [\fI\-\-multiple\fR]
-[\fI\-\-num=NUM\fR] [\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
-[\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-zero\fR] \fISMP_DEVICE[,N]\fR
+[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
+[\fI\-\-ignore\fR] [\fI\-\-interface=PARAMS\fR] [\fI\-\-list\fR]
+[\fI\-\-multiple\fR] [\fI\-\-num=NUM\fR] [\fI\-\-phy=ID\fR]
+[\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-summary\fR]
+[\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-zero\fR]
+\fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) DISCOVER function request to a SMP
-target and decodes or outputs the response. The SMP target is identified by
-the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on the interface,
-the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
-The mpt interface uses \fISMP_DEVICE\fR
-to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
-differentiate between HBAs if there are multiple present.
+Sends one or more SAS Management Protocol (SMP) DISCOVER function requests
+to a SMP target and decodes or outputs the responses. The SMP target is
+identified by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on
+the interface, the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
+The mpt interface uses \fISMP_DEVICE\fR to identify a HBA (an SMP
+initiator) and needs the additional \fI,N\fR to differentiate between HBAs
+if there are multiple present.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
+.TP
+\fB\-A\fR, \fB\-\-adn\fR
+causes the "attached device name" field to be output when the
+\fI\-\-multiple\fR or \fI\-\-summary\fR option is also given. See the section
+below on SINGLE LINE PER PHY FORMAT. Note the "attached device name" field
+was added is SAS\-2.
 .TP
 \fB\-b\fR, \fB\-\-brief\fR
 reduce the decoded response output. If used twice will exit if there is no
@@ -49,6 +57,7 @@ does a DISCOVER request and outputs a one line summary. Phy 0 is queried
 first, then phy 1, continuing until an error occurs. If \fI\-\-brief\fR is
 given then there is no output for phys that indicate there is no attached
 device; when used twice additionally trims the output line of attached phys.
+See the section below on SINGLE LINE PER PHY FORMAT.
 .TP
 \fB\-n\fR, \fB\-\-num\fR=\fINUM\fR
 number of phys to fetch, starting at \fI\-\-phy=ID\fR when the
@@ -74,6 +83,7 @@ either prefix it with '0x' or put a trailing 'h' on it.
 output a multi line summary, with one line per active phy. Checks all
 phys (or less is \fI\-\-num=NUM\fR is given), starting at phy 0 (unless
 \fI\-\-phy=ID\fR is given). Equivalent to '--multiple --brief' ('-mb').
+See the section below on SINGLE LINE PER PHY FORMAT.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 increase the verbosity of the output. Can be used multiple times
@@ -86,7 +96,7 @@ zero the Allocated Response Length field in the request. This option
 also zeros the Request Length field in the request. This is required
 for strict SAS\-1.1 compliance. However this option should not be
 given in SAS\-2 and later; if it is given an abridged response may result.
-.SH SINGLE LINE FORMAT
+.SH SINGLE LINE PER PHY FORMAT
 The \fI\-\-multiple\fR option causes SMP DISCOVER responses to be compressed
 to a header followed by one line per phy. To save space SAS addresses are
 shown in hex without a '0x' prefix or 'h' suffix. The header line gives the
@@ -128,6 +138,14 @@ the t13.org term):
 If the expander supports zoning (i.e. REPORT GENERAL response bit
 for 'zoning supported' is set) and a phy's zone group is other than zg 1
 then the phy's zone group is shown (e.g. "ZG:2").
+.PP
+If the \fI\-\-adn\fR option is given then after the attached SAS address
+and the attached device's phy identifier are output an extra field is
+inserted containing the "attached device name" field. For a SAS disk this
+should be its target device name (in NAA-5 format) and for a SATA disk its
+WWN (if provided, also in NAA-5 format). Also when the \fI\-\-adn\fR option
+is given the phy speed and zone group are not output in order to keep the
+line length reasonable.
 .SH EXAMPLES
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html
 .SH CONFORMING TO
